# blenderenv

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yaml  pyproject.toml  setup.cfg
blenderenv/: __init__.py  config.py  db.py  globals.py  schema.sql
src/blenderenv/: __init__.py
src/cli/: __init__.py  helpers.py  main.py
src/cli/commands/: __init__.py  _global.py  _install.py  _local.py  _uninstall.py  _version.py  _versions.py
tests/: __init__.py  conftest.py  test_config.py  test_db.py  test_globals.py  test_help_messages.py
tests/cli/: __init__.py  test_global.py  test_help_messages.py  test_local.py  test_main.py
